--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,5 +56,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' && true || false }}
           tags: |
-            ${{ env.REGISTRY }}/hello-world:${{ env.SHA8 }}
-            ${{ env.REGISTRY }}/hello-world:latest
+            ${{ env.REGISTRY }}/banshee86vr/hello-world:${{ env.SHA8 }}
+            ${{ env.REGISTRY }}/banshee86vr/hello-world:latest
