--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,17 @@
 on:
   push:
     branches:
-      - "*"
+      - "main"
 
 permissions:
   contents: write
   pages: write
   id-token: write
 
-env:
-  REGISTRY: ghcr.io
     
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
@@ -31,30 +28,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
-
-  build-docker-image:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to GitHub Res
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Get short SHA
-        id: slug
-        # run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
-        run: echo "SHA8=$(echo ${GITHUB_SHA} | cut -c1-8)" >> "$GITHUB_ENV"
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: "{{defaultContext}}:hello-world-app"
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.ref == 'refs/heads/main' && true || false }}
-          tags: |
-            ${{ env.REGISTRY }}/banshee86vr/hello-world:${{ env.SHA8 }}
-            ${{ env.REGISTRY }}/banshee86vr/hello-world:latest
