fix(ci): upgrade npm

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: "latest"
+      - name: Check action's npm version
+        run: npm -v
+      - name: Update npm version
+        run: npm i -g npm@latest
+      - name: Check updated npm version
+        run: npm -v
       - name: Install dependencies
         run: npm clean-install
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
