--- a/argo-workflow/ci.yaml
+++ b/argo-workflow/ci.yaml
@@ -33,13 +33,13 @@ spec:
   arguments:
     parameters:
       - name: repo
-        value: banshee86vr/ephemeral-test-environment.git
+        value: ypolosov/ephemeral-test-environment.git
       - name: branch
         value: main
       - name: path
         value: hello-world-app
       - name: image
-        value: ghcr.io/banshee86vr/hello-world:latest
+        value: ghcr.io/ypolosov/hello-world:latest
   entrypoint: main
   # We use a volume claim template so that we can have a shared workspace.
   volumeClaimTemplates:
